SYS-782: POC for capturing file name while blocking upload

--- a/oral_history/templates/oral_history/base.html
+++ b/oral_history/templates/oral_history/base.html
@@ -1,6 +1,9 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
     <head>
+        <!-- Custom JS -->
+        <script src="{% static 'js/main.js' %}" defer></script>
     </head>
     <body>
         {% block content %}
