--- a/oral_history/templates/oral_history/fileupload.html
+++ b/oral_history/templates/oral_history/fileupload.html
@@ -9,11 +9,16 @@ created_by: {{ item.created_by }}<br>
 item_ark: {{ item.item_ark }}<br>
 {% endfor %}
 {% if messages %}
-<ul class = "messages">
     {% for message in messages %}
-    <li{% if message.tags %} class = "{{ message.tags }}"{% endif %}>{{ message }}</li>
+    <div class="container-fluid p-0">
+      <div class="alert {{ message.tags }} alert-dismissible" role="alert" >
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="True">&times;</span>
+        </button>
+        {{ message }}
+      </div>
+    </div>
     {% endfor %}
-</ul>
 {% endif %}
 <br>
 <form name="upload_file_form" method="POST" enctype="multipart/form-data" onsubmit="skip_upload(this);">
