--- a/oral_history/templates/oral_history/fileupload.html
+++ b/oral_history/templates/oral_history/fileupload.html
@@ -15,7 +15,7 @@ item_ark: {{ item.item_ark }}<br>
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
           <span aria-hidden="True">&times;</span>
         </button>
-        {{ message }}
+        {{ message|safe }}
       </div>
     </div>
     {% endfor %}
